* About
This file records my personal changelog to the [[https://github.com/seagle0128/doom-modeline][doom-modeline]] repository.  The
branch ‘original’ is synced with upstream; and the branch ‘ayah’ contains my
personal changes.

* Changes
** Move ‘major-mode’ to the end of the mode line
** Create the ‘dired’ modeline
Display the name of dired buffers with ‘doom-modeline-buffer-path’ face.
Changes include:
  - define the segment ‘buffer-info-dired’
  - define the ‘dired’ mode line
  - Register ‘dired’ mode line with ‘doom-modeline-alist’