@@ -151,6 +151,18 @@
   '(bar window-number modals matches buffer-info-dired remote-host buffer-position word-count parrot selection-info)
   '(compilation objed-state misc-info battery irc-buffers debug minor-modes input-method indent-info buffer-encoding process major-mode))
 
+(doom-modeline-def-modeline 'gnus-group
+  '(bar window-number modals matches buffer-info buffer-position gml)
+  '(time major-mode))
+
+(doom-modeline-def-modeline 'gnus-summary
+  '(bar window-number modals matches buffer-info sml)
+  '(time major-mode))
+
+(doom-modeline-def-modeline 'gnus-article
+  '(bar window-number modals matches buffer-info buffer-position aml)
+  '(time major-mode))
+
 
 ;;
 ;; Interfaces
@@ -192,7 +204,10 @@ If DEFAULT is non-nil, set the default mode-line for all buffers."
     (circe-mode           . special)
     (erc-mode             . special)
     (rcirc-mode           . special)
-    (dired-mode           . dired))
+    (dired-mode           . dired)
+    (gnus-group-mode      . gnus-group)
+    (gnus-summary-mode    . gnus-summary)
+    (gnus-article-mode    . gnus-article))
   "Alist of major modes and mode-lines.")
 
 (defun doom-modeline-auto-set-modeline ()
